--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
 </head>
 <body>
     <h1> Apps FTW!</h1>
+
+    <p>
+        <label>
+            Name:
+        <input name="name" type="text">
+        </label>
+    </p>
+
+    <p>
+        <label>
+            Comments:
+                <textarea></textarea>
+        </label>
+    </p>
+
+    <p>
+        <input type="checkbox"> Olives
+        <input type="checkbox"> Pepperoni
+        <input type="checkbox"> Onions
+
+    </p>
+
+    <p>
+        <input type="radio"> A
+        <input type="radio"> B
+        <input type="radio"> C
+
+    </p>
+    <button onclick="sayHello()">Click Me!</button>
     <script src="index.js"></script>
 </body>
 </html>
