--- a/index.html
+++ b/index.html
@@ -9,35 +9,36 @@
 </head>
 <body>
     <h1> Apps FTW!</h1>
-
+ <form onsubmit="return handleSubmit(event),false;">
     <p>
         <label>
             Name:
-        <input name="name" type="text">
+        <input name="name" type="text" value="Marcy">
         </label>
     </p>
 
     <p>
         <label>
             Comments:
-                <textarea></textarea>
+                <textarea>I am a comment</textarea>
         </label>
     </p>
 
     <p>
-        <input type="checkbox"> Olives
-        <input type="checkbox"> Pepperoni
-        <input type="checkbox"> Onions
+            <label><input type="checkbox" value ="toppings"> Olives </label>
+            <label><input type="checkbox" value ="toppings"> Pepperoni</label>
+            <label><input type="checkbox" value ="toppings"> Onions</label>
 
     </p>
 
     <p>
-        <input type="radio"> A
-        <input type="radio"> B
-        <input type="radio"> C
+       <label><input name="grade" type="radio" value="grade"> A</label>
+        <label><input name ="grade" type="radio" value="grade"> B </label>
+        <label><input name ="grade" type="radio" value="grade"> C </label>
 
     </p>
-    <button onclick="sayHello()">Click Me!</button>
+    <button> Submit </button>
+</form>
     <script src="index.js"></script>
 </body>
 </html>
